# agentic-backend

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOOD_FIRST_ISSUES.md  README.md  SECURITY.md  SSE_STREAMING_API.md  STREAMING_FIXES_SUMMARY.md  main.py  pyproject.toml
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: labeler.yml  labels-sync.yml
alembic/versions/: 001_initial_schema.py  002_add_oauth_fields.py  003_performance_indexes.py
app/: main.py
app/api/v1/: __init__.py  auth.py  chat.py  oauth.py
app/core/: agent_config.py  config.py  security.py
app/models/: __init__.py  base.py  conversation.py  message.py  refresh_token.py  user.py
app/schema/: auth.py  chat.py  user.py
app/services/: auth_service.py  oauth_service.py  user_service.py
app/utils/: db.py
docs/: pr-issue-6.md  pr-issue-7.md  pr-issue-8.md
examples/: README.md
tests/: run_smoke_runner.py  test_smoke.py  test_smokes.py
