[project]
name = "agentic-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "python-jose>=3.5.0",
    "sqlmodel>=0.0.25",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "anyio>=4.11.0",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
